add drafts of saving data

--- a/_drafts/android/daladala/2014-05-27-Grade.md
+++ b/_drafts/android/daladala/2014-05-27-Grade.md
@@ -48,7 +48,7 @@ date: 2014-05-25 09:25
 
 **第四步**：验证
 
-设置完之后，**重新打开一个终端**；否则输入`gradle -v`来查看gradle版本。如果能够正常输出gradle版本，那么恭喜你：gradle安装成功了！
+设置完之后，**重新打开一个终端**；然后输入`gradle -v`来查看gradle版本。如果能够正常输出gradle版本，那么恭喜你：gradle安装成功了！
 
 
 
