Android: 01, add source link. 02, add TabHost and ViewPager.

--- a/_posts/android/api_guide/ui/2014-06-15-Dialog.md
+++ b/_posts/android/api_guide/ui/2014-06-15-Dialog.md
@@ -18,7 +18,7 @@ date: 2014-06-15 09:11
 
 下面介绍DialogFragment的基本使用方法。
 
-点击查看：[Dialog的基本用法完整代码](TODO)
+点击查看：[Dialog的基本用法完整代码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/dialog/01_dialogfragment/DialogTest)
 
 
 ## 1. 创建DialogFragment
@@ -84,7 +84,7 @@ date: 2014-06-15 09:11
 
 下面介绍自定义DialogFragment的布局的方法
 
-点击查看：[自定义DialogFragment布局的完整代码](TODO)
+点击查看：[自定义DialogFragment布局的完整代码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/dialog/02_self_layout/DialogTest)
 
 ## 1. 设置布局文件
 
@@ -149,7 +149,7 @@ date: 2014-06-15 09:11
 
 下面介绍自定义DialogFragment和Activity交互的方法
 
-点击查看：[DialogFragment和Activity交互的完整代码](TODO)
+点击查看：[DialogFragment和Activity交互的完整代码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/dialog/03_callback/DialogTest)
 
 ## 1. 定义通信接口
 
