--- a/_posts/android/api_guide/ui/2014-06-18-Toast.md
+++ b/_posts/android/api_guide/ui/2014-06-18-Toast.md
@@ -14,7 +14,7 @@ date: 2014-06-18 09:11
 <a name="anchor1"></a>
 # Toast的基本用法
 
-点击查看：[Toast的基本用法完整代码](TODO)
+点击查看：[Toast的基本用法完整代码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/widgets/Toast/01_basic)
 
 
 
