--- a/_posts/android/api_guide/ui/2014-06-20-View.md
+++ b/_posts/android/api_guide/ui/2014-06-20-View.md
@@ -14,7 +14,7 @@ date: 2014-06-20 09:11
 <a name="anchor1"></a>
 # 自定义控件的基本步骤
 
-下面介绍如何自定义一个控件。点击查看：[自定义控件的完整源码](TODO)
+下面介绍如何自定义一个控件。点击查看：[自定义控件的完整源码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/self_view)
 
 ## 1. 编写控件类
 
