--- a/_posts/android/api_guide/ui/2014-06-17-Search.md
+++ b/_posts/android/api_guide/ui/2014-06-17-Search.md
@@ -16,7 +16,7 @@ date: 2014-06-17 09:11
 
 下面介绍Search对话框的基本使用方式。
 
-点击查看：[Search对话框的完整源码](TODO)
+点击查看：[Search对话框的完整源码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/search/01_search_dialog)
 
 ## 1. 创建一个可搜索的配置
 
@@ -169,7 +169,7 @@ Activity对应的my_search.xml内容如下：
 
 下面介绍Search Widget的使用方法。它和Search对话框的使用和类似！
 
-点击查看：[Search对话框的完整源码](TODO)
+点击查看：[Search对话框的完整源码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/search/02_search_widget)
 
 ## 1. 创建一个可搜索的配置
 
@@ -244,7 +244,7 @@ Activity对应的my_search.xml内容如下：
 
 下面谈谈使用最近查询记录的方法。
 
-点击查看：[最近查询记录的完整源码](TODO)
+点击查看：[最近查询记录的完整源码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/search/03_search_suggestion)
 
 ## 1. 查询记录类
 
