Android: add Hollow Rectangle Button.

--- a/_posts/android/api_guide/ui/widgets/2014-06-06-Button.md
+++ b/_posts/android/api_guide/ui/widgets/2014-06-06-Button.md
@@ -272,6 +272,18 @@ date: 2014-06-06 09:11
     </selector>
 
 
+下面是一个白色矩形边框的定义。
 
-
-
+    <!-- dashGap是虚线间隔。如果是0，则是实线 -->
+    <!-- width是线宽。-->
+    <!-- color是线的颜色 -->
+    <item>      
+        <shape android:shape="rectangle">
+            <corners android:radius="4dip"/>
+            <solid android:color="#000000"/>
+            <stroke
+                android:dashGap="0dp"
+                android:width="2dp"
+                android:color="@android:color/white" />
+        </shape>  
+    </item>    
