Ubuntu and vim.

--- a/_posts/linux/vim/2011-08-01-vim-02-basic.md
+++ b/_posts/linux/vim/2011-08-01-vim-02-basic.md
@@ -26,6 +26,10 @@ date: 2011-08-01 10:01
 > &nbsp;&nbsp;&nbsp;&nbsp; [3.1 模式说明](#anchor3_1)   
 > &nbsp;&nbsp;&nbsp;&nbsp; [3.2 进入方式](#anchor3_2)   
 > &nbsp;&nbsp;&nbsp;&nbsp; [3.3 模式详解](#anchor3_3)   
+> [4. 替换模式](#anchor4)   
+> &nbsp;&nbsp;&nbsp;&nbsp; [4.1 模式说明](#anchor4_1)   
+> &nbsp;&nbsp;&nbsp;&nbsp; [4.2 进入方式](#anchor4_2)   
+> &nbsp;&nbsp;&nbsp;&nbsp; [4.3 模式详解](#anchor4_3)   
  
 
 <a name="anchor1"></a>
@@ -98,16 +102,16 @@ date: 2011-08-01 10:01
     l  (01) 右移光标一个字母。  (常用)
        (02) nl，其中n为数字，表示右移n个字母。
     M  (middle的首字母)光标移动到本屏中间行。
-    m  (mark的首字母)[组合键][书签键]用于保存书签。在讲解vim书签时，再详细介绍该指令！ TODO
-    N  [用于查找指令]查找上一个搜索项。在讲解搜索的时候，再详细介绍该指令。TODO
-    n  (next的首字母)[用于查找指令]查找下一个搜索项。在讲解搜索的时候，再详细介绍该指令。 TODO
+    m  (mark的首字母)[组合键][书签键]用于保存书签。在下一章讲解vim书签时，再详细介绍该指令！ 
+    N  [用于查找指令]查找上一个搜索项。在下一章讲解搜索的时候，再详细介绍该指令。
+    n  (next的首字母)[用于查找指令]查找下一个搜索项。在下一章讲解搜索的时候，再详细介绍该指令。 
     O  在当前行的上边插入新行，并进入"插入模式"。
     o  (open的首字母)在当前行的下边插入新行，并进入"插入模式"。  (常用)
-    P  [用于复制/粘贴指令]在当前字母的前面或当前行的上面进行粘贴。在讲解复制/粘贴的时候，再详细介绍该指令。 TODO
-    p  (paste的首字母)[用于复制/粘贴指令]在当前字母的后面或当前行的下面进行粘贴。在讲解复制/粘贴的时候，再详细介绍该指令。  (常用) TODO
-    R  进入"替换模式"。在讲解替换模式的时候，再详细介绍该指令。 TODO
+    P  [用于复制/粘贴指令]在当前字母的前面或当前行的上面进行粘贴。在下一章讲解复制/粘贴的时候，再详细介绍该指令。 
+    p  (paste的首字母)[用于复制/粘贴指令]在当前字母的后面或当前行的下面进行粘贴。在下一章讲解复制/粘贴的时候，再详细介绍该指令。  (常用) 
+    R  进入"替换模式"。在后面讲解替换模式的时候，再详细介绍该指令。 
     Q  进入"Ex模式"。
-    q  [用于宏记录]在讲解宏记录时，再详细说明。 TODO
+    q  [用于宏记录]在后面章节讲解宏记录时，再详细说明。 
     r  (replace的首字母)[组合键]替换当前字母。 r<charater> 其中，charater表示字母或数字；它的含义是用charater替换当前光标处的字母。  (常用)
     S  删除当前行，并进入"插入模式"。 
     s  (subtract的首字母)删除当前字母，并进入"插入模式"。 
@@ -140,7 +144,7 @@ date: 2011-08-01 10:01
        `` 跳转到(当前文件)上一次的跳转位置，并且光标位于上一次所在的字母位置。
     '  [组合键]
        '' 跳转到(当前文件)上一次的跳转位置，并且光标位于行首。
-    @  [用于宏指令]在宏指令(即，命令的记录与回放)时再介绍该指令。  TODO
+    @  [用于宏指令]在后面章节章节讲解宏指令(即，命令的记录与回放)时再介绍该指令。  
     #  向上查找。  (常用)
     *  向下查找。  (常用)
     $或<End>  光标移至当前行的末尾。  (常用)
@@ -232,3 +236,26 @@ date: 2011-08-01 10:01
     :%!xxd -r  退出十六进制浏览状态
 
 
+
+<br/>
+<a name="anchor4"></a>
+# 4. 替换模式
+
+<a name="anchor4_1"></a>
+## 4.1 模式说明
+
+替换模式的作用是让用户进行文本替换。
+
+<a name="anchor4_2"></a>
+## 4.2 进入方式
+
+在普通模式下，输入大写字母R进行替换模式。假如输入小写字母r，则智慧替换当个字符。
+
+<a name="anchor4_3"></a>
+## 4.3 模式详解
+
+在普通模式下，输入大写字母R进行替换模式。
+
+
+
+[link_vim_basic03]: /2011/08/01/vim-03-basic/
