Datastruct tansplant done.

--- a/_posts/datastructs/tree/2013-02-01-bstree-c.md
+++ b/_posts/datastructs/tree/2013-02-01-bstree-c.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "二叉查找树(一)之 C语言详解"
-description: "bubble sort"
+description: "tree bstree"
 category: datastructure
 tags: [tree,c]
 date: 2013-02-01 09:18
