--- a/_posts/datastructs/tree/2013-02-04-huffman-c.md
+++ b/_posts/datastructs/tree/2013-02-04-huffman-c.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "哈夫曼树(一)之 C语言详解"
-description: "bubble sort"
+description: "tree"
 category: datastructure
 tags: [tree,c]
 date: 2013-02-04 09:18
