--- a/_posts/android/ui/widgets/2014-02-01-TextView.md
+++ b/_posts/android/ui/widgets/2014-02-01-TextView.md
@@ -46,7 +46,7 @@ TextView是Android的文本显示器，主要用于文本显示。Android的Text
         }
     }
 
-**layout文件**
+**layout代码**
 
     <?xml version="1.0" encoding="utf-8"?>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
