Ubuntu: demo of ubuntu commands summary.

--- a/_posts/linux/ubuntu/2011-07-04-ubuntu-01-cmd.md
+++ b/_posts/linux/ubuntu/2011-07-04-ubuntu-01-cmd.md
@@ -7,30 +7,59 @@ tags: [linux]
 date: 2011-07-04 09:01
 ---
 
-> 如果你想ubuntu开机后自动挂载其他分区(如windows系统的相关分区)，或者开机之后想手动挂载其他分区。都可以尝试阅读本文！
-
-
-## 1. 自动挂载
-
-
-## 1. 查看硬盘信息
-
 **(01) 查看已经挂载的磁盘**
 
     $ mount
 
 说明：该指令会列出所有已经挂载到系统的分区。
 
-**(02) 卸载已经挂载的分区**
+**(02) 手动挂载磁盘丰南区**
+
+    $ sudo mount /dev/sdb1 /media/tmp
+    或
+    $ sudo mount -t fat32 /dev/sdb1 /media/tmp
+    或
+    $ sudo mount -t ext4 /dev/sdb1 /media/tmp
+
+说明：上述指令是将节点/dev/sdb1挂载到路径/media/tmp上。
+
+**(03) 卸载已经挂载的分区**
 
     $ sudo umount /dev/sdb1
+    或
+    $ sudo umount /media/tmp
 
-说明：该指令会卸载磁盘分区/dev/sdb1。如果想卸载其他分区。将/dev/sdb1改成你所需要卸载的分区即可！
+说明：该指令会卸载磁盘分区/dev/sdb1(它对应的挂载路径是/media/tmp)。
 
-**(03) 查看磁盘完整的分区信息**
+**(04) 格式化磁盘分区**
+
+    $ sudo mkfs.vfat /dev/sdb1
+    或
+    $ sudo mkfs.ext4 /dev/sdb1
+
+说明：mkfs.vfat会将/dev/sdb1格式化为fat32格式，而mkfs.ext4则会将/dev/sdb1格式化为ext4格式。  
+注意：格式化磁盘分区之后，必须先通过umount卸载磁盘分区。
+
+
+**(05) 查看磁盘完整的分区信息**
 
     $ sudo fdisk -l /dev/sda
 
 说明：该指令会列出/dev/sda磁盘下的所有子分区，无论该子分区挂载与否。
+
+
+**(06) 重新分区**
+
+    $ sudo fdisk /dev/sda
+
+说明：进入fdisk指令之后，可以通过相应的字母执行相应的动作。  
+d -- 删除分区  
+a -- 添加分区  
+w -- 保存对分区的修改  
+l -- 显示分区  
+t -- 修改分区类型  
+l -- 显示支持的分区类型  
+q -- 退出fdisk  
+
 
 
